--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jingyi Li(李竞宜)"
+  name             : "  Jingyi Li(李竞宜)"
   avatar           : "profile.png"
   bio              : "Master Student at Sun Yat-sen University(SYSU)"
   location         : "Guangzhou, China"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/Drenches"
+  github           : "Drenches"
   google_plus      :
   keybase          :
   instagram        :
