--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ facebook:
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
+zhihu:
+  username               : &李竞宜
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -115,6 +117,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  zhihu            : "https://www.zhihu.com/people/li-jing-yi-77-2"
 
 
 # Reading Files
