--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ facebook:
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
 zhihu:
-  username               : &李竞宜
+  username               : "李竞宜"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
