--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "  Jingyi Li(李竞宜)"
+  name             : "     Jingyi Li(李竞宜)"
   avatar           : "profile.png"
-  bio              : "Master Student at Sun Yat-sen University(SYSU)"
+  bio              : "Master Student at School of Data and Computer Science, Sun Yat-sen University(SYSU)"
   location         : "Guangzhou, China"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
